@@ -6,8 +6,8 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.15</maven.compiler.source>
-        <maven.compiler.target>1.15</maven.compiler.target>
+        <maven.compiler.source>1.16</maven.compiler.source>
+        <maven.compiler.target>1.16</maven.compiler.target>
     </properties>
     <build>
         <plugins>
@@ -16,10 +16,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <release>15</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>16</source>
+                    <target>16</target>
+                    <release>16</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -40,6 +39,20 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>com.lokamc</groupId>
+            <artifactId>LokaCore</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.cryptite</groupId>
+            <artifactId>LokaLib</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
@@ -62,6 +75,12 @@
         </dependency>
     </dependencies>
     <repositories>
+        <!-- Loka -->
+        <repository>
+            <id>com.lokamc</id>
+            <url>http://ysera.dyndns.org:8090/releases/</url>
+        </repository>
+
         <repository>
             <id>papermc</id>
             <url>https://papermc.io/repo/repository/maven-public/</url>
